# news_api

./: .gitignore  LICENSE  Pipfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  env.example  pyproject.toml
app/: email_service.py  main.py  s3_service.py  schemas.py  search.py
app/routers/: contact.py  news.py
localstack-init/: 01-create-s3-bucket.sh
scripts/: create_sample_articles.py  create_sample_articles_with_thumbnails.py
tests/: conftest.py  manual_email_test.py  test_api.py
