[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-api"
version = "1.0.0"
description = "FastAPI + Meilisearchを使用した高速ニュース記事管理API"
authors = [{name = "Yuya Shiraishi"}]
license = {text = "MIT"}
requires-python = ">=3.8"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestDeprecationWarning"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"] 